crud tabela de preço
